Reinstated previously commented out http test code:
- SNITest
  - reworked apacheHttpClientSupportSNI to testThatHttpClientSupportsSNI

- CollectServerClientTest
  - Uncommented httpRequests_shouldHaveUseragentHeader
  - Reworked doRequest to use collectServerClient and removed the unnecessary methods (httpClient(), httpContext())

Modified HttpInputStreamResult to include a statusCode, although this is primarily for testing it seems like a logical thing to include.